[gd_scene load_steps=29 format=2]

[ext_resource path="res://games/demo_game/actors/mark/sprites/mark11.png" type="Texture" id=1]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark12.png" type="Texture" id=2]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark9.png" type="Texture" id=3]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark10.png" type="Texture" id=4]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark7.png" type="Texture" id=5]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark4.png" type="Texture" id=6]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark1.png" type="Texture" id=7]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark13.png" type="Texture" id=8]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark2.png" type="Texture" id=9]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark8.png" type="Texture" id=10]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark3.png" type="Texture" id=11]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark14.png" type="Texture" id=12]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark17.png" type="Texture" id=13]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark16.png" type="Texture" id=14]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark15.png" type="Texture" id=15]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark18.png" type="Texture" id=16]
[ext_resource path="res://games/demo_game/actors/mark/sprites/mark19.png" type="Texture" id=17]
[ext_resource path="res://tools/grog/twod/actor.gd" type="Script" id=18]
[ext_resource path="res://tools/grog/twod/ndirections_sprite.gd" type="Script" id=67]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 47 ]
}

[node name="mark" type="Node2D"]
script = ExtResource( 18 )
color = Color( 0.917647, 0.443137, 0.443137, 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 1 )
offset = Vector2( 0, -35 )

[node name="animation" type="AnimationPlayer" parent="."]
playback_speed = 1.6
anims/default = SubResource( 2 )
anims/idle_front = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/idle_rightfront = SubResource( 5 )
anims/idle_up = SubResource( 6 )
anims/walk_front = SubResource( 7 )
anims/walk_right = SubResource( 8 )
anims/walk_up = SubResource( 9 )

[node name="ndirections" type="Node" parent="."]
script = ExtResource( 67 )
config = [ {
"idle": "idle_right",
"value": 22.5,
"walk": "walk_right"
}, {
"idle": "idle_rightfront",
"value": 67.5,
"walk": "walk_front"
}, {
"idle": "idle_front",
"value": 112.5,
"walk": "walk_front"
}, {
"idle": "idle_rightfront.flip_h",
"value": 135.0,
"walk": "walk_front"
}, {
"idle": "idle_right.flip_h",
"value": 225.0,
"walk": "walk_right.flip_h"
}, {
"idle": "idle_up",
"value": 315.0,
"walk": "walk_up"
} ]
animation_path = NodePath("../animation")
sprite_path = NodePath("../Sprite")
[connection signal="orientation_changed" from="." to="ndirections" method="_on_orientation_changed"]
[connection signal="start_walking" from="." to="ndirections" method="_on_start_walking"]
[connection signal="stop_walking" from="." to="ndirections" method="_on_stop_walking"]
